--- a/想法.md
+++ b/想法.md
@@ -5,3 +5,25 @@
    网站读取，然后进行阅读
 
    
+
+   question: 
+
+   target:
+
+   
+
+   
+
+   possible solution:
+
+3. 提示词进行完善：
+
+交互式的给一些完善的建议
+
+
+
+4.数据可能的来源：
+
+
+
+创造类：
